<resources>
    <string name="app_name">e Chit</string>
    <string name="sample_text">Sample Text</string>
    <string name="organizer_image">Organizer Image</string>
    <string name="months">Months</string>
    <string name="to_pay">To Pay</string>
    <string name="pending">Pending</string>
    <string name="overall_pending">Overall Pending</string>
    <string name="bid_amount">Bid Amount</string>
    <string name="organizers">Organizers</string>
    <string name="contact">Contact</string>
    <string name="dialer_button">Dialer button</string>
    <string name="money_content_description">Money gif</string>
    <string name="sign_out">Sign Out</string>
    <string name="bank_details">Bank Details</string>
    <string name="loading">Loading</string>
    <string name="chit">Chit</string>
    <string name="name">Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="branch">Branch</string>
    <string name="account_number">Account No.</string>
    <string name="ifsc">IFSC Code</string>
    <string name="phone">Phone</string>
    <string name="update">Update</string>
    <string name="update_available">Update Available</string>
    <string name="cancel">Cancel</string>
</resources>